# dioxus-material-icons

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
examples/: button.rs
src/: lib.rs  self-hosted-styles.css
