[package]
name = "dioxus-material-icons"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Material Icons for Dioxus"
repository = "https://github.com/lennartkloock/dioxus-material-icons"
homepage = "https://lennart.codes/dioxus-material-icons"
keywords = ["dioxus", "material-design", "icons", "ui", "gui"]
categories = ["web-programming", "gui"]
readme = "README.md"

[[example]]
name = "button"
path = "examples/button.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"

[dev-dependencies]
dioxus-desktop = "0.4.0"
