[package]
name = "dioxus-material-icons"
version = "1.2.0"
edition = "2021"
license = "MIT"
description = "Material Icons for Dioxus"
repository = "https://github.com/lennartkloock/dioxus-material-icons"
homepage = "https://lennart.codes/dioxus-material-icons"
keywords = ["dioxus", "material-design", "icons", "ui", "gui"]
categories = ["web-programming", "gui"]
readme = "README.md"

[[example]]
name = "button"
path = "examples/button.rs"

[dependencies]
dioxus = "0.5.1"

[dev-dependencies]
dioxus-desktop = "0.4.3"
